--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,28 +1,32 @@
-.App {
-  text-align: center;
+
+.app {
+	background-color: rgba(41, 44, 52, 0.2);
+}
+.app-header {
+	text-align: center;
+	color: rgb(60,60,60);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+.menu > ul{
+	display: flex;
+	justify-content: center;
+}
+.menu > ul > li {
+	margin: 1em 3em;
+	list-style: none;
+	text-decoration: none;
+}
+.menu > ul > li:hover {
+	cursor: pointer;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.menu > ul > li > a {
+	text-decoration: none;
+	color: rgb(70,70,70);
+	font-family: 'Cantarell', sans-serif;
+	font-size: 1.5em;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.menu > ul > li > a:hover {
+	cursor: pointer;
 }
