--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 2em;
 }
+
+h1,h2,h3,h4,h5 {
+	font-family: 'Cantarell', sans-serif;
+}
+h1 {
+	font-size: 3em;
+}
+
+
