--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
+html{
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   font-weight: 400;
-  max-width: 1600px;
   margin: 0 auto;
-  padding: 2em;
 }
 
 h1,h2,h3,h4,h5 {
