--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 html{
   font-size: 16px;
 }
-
 body {
   margin: 0;
   padding: 0;
@@ -17,5 +16,23 @@ h1,h2,h3,h4,h5 {
 h1 {
 	font-size: 3em;
 }
+
+.container {
+	width: 90%;
+	margin: 0 auto;
+	max-width: 1200px;
+}
+@media only screen and (min-width: 600px) and (max-width: 991px){
+	.container {
+		width: 85%;
+	}
+}
+
+@media only screen and (min-width: 992px){
+		.container {
+		width: 70%;
+	}
+}
+
 
 
