--- a/src/pages/PostList.css
+++ b/src/pages/PostList.css
@@ -5,9 +5,18 @@
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
+	align-items: flex-end;
 }
 
-
 select {
-	display: block;
+	border-radius: 0px;
+	margin-left: 1em;
+	font-size: 16px;
+	background-color: transparent;
+	border: none;
+}
+
+.sort-container {
+	padding-bottom: 0.5em;
+	border-bottom: solid 1px #263238;
 }
