--- a/src/pages/Navigation.css
+++ b/src/pages/Navigation.css
@@ -6,6 +6,7 @@ nav {
 	color: white;
 	background-color: #263238;
 	height: 70px;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
 }
 nav .container {
 	height: 100%;
@@ -80,7 +81,6 @@ nav ul, .mobile-nav ul {
 	transform: scaleX(1);
 }
 .mobile-nav {
-	z-index: 1;
 	left: 0;
 	top: 0;
 	overflow-x: hidden;
@@ -88,19 +88,18 @@ nav ul, .mobile-nav ul {
 	height: 100%;
 	position: fixed;
 	background-color: #263238;
+	z-index: 1000;
 }
 .mobile-nav.close {
 	width: 0;
-	display: hidden;
-
 }
+
 .mobile-nav.open {
-	display: block;
 	width: 300px;
 }
 .mobile-nav ul {
 	position: relative;
-	top: 20%;
+	top: 10%;
 	width: 100%;
 	text-align: center;
 	margin-top: 30px;
@@ -117,6 +116,10 @@ nav ul, .mobile-nav ul {
 	top: 20px;
 	right: 45px;
 	cursor: pointer;
+}
+.mobilenav-overlay {
+	display: none;
+	transition: 0.5s;
 }
 @media only screen and (min-width: 992px) {
 	.mobile-nav {
@@ -143,6 +146,21 @@ nav ul, .mobile-nav ul {
 		left: 50%;
 		transform: translateX(-50%);
 		line-height: 70px;
+	}
+	.mobile-nav.close + .mobilenav-overlay {
+		display: none;
+	}
+	.mobile-nav.open + .mobilenav-overlay {
+		display: block;
+		z-index: 200;
+		position: fixed;
+		top:0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: 120vh;
+		background-color: rgba(0,0,0,0.5);
+
 	}
 
 }
