--- a/src/pages/postList/NewPost.css
+++ b/src/pages/postList/NewPost.css
@@ -13,8 +13,8 @@
 	min-width: 250px;
 	width: 50%;
 }
-.name-category .author, .name-category .category{
-	margin-bottom: 1em;
+.name-category p {
+	margin-top: 0px;
 }
 .form-buttons{
 	margin: 1em 0;
@@ -24,7 +24,7 @@
 .form-buttons > button:first-child {
 	margin-right: 1em;
 }
-input.error, textarea.error {
+.error {
 	border: 1px solid red;
 }
 .errmsg {
