--- a/src/pages/PostList.css
+++ b/src/pages/PostList.css
@@ -11,4 +11,12 @@
 .sort-container {
 	padding-bottom: 0.5em;
 	border-bottom: solid 1px #263238;
+
+}
+.sort-container select {
+	margin-left: 0.5em;
+
+}
+.post-list-container {
+	margin: 2em 0;
 }
