--- a/src/pages/Navigation.css
+++ b/src/pages/Navigation.css
@@ -60,6 +60,7 @@ nav ul, .mobile-nav ul {
 	background-color: #455a64;
 	border-bottom: solid 3px #263238;
 	transition: 0.5s;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2), -10px 0 30px rgba(0,0,0,0.6), 10px 0 30px rgba(0,0,0,0.6);
 }
 .mobile-nav a.selected {
 	background-color: #455a64;
