--- a/src/index.css
+++ b/src/index.css
@@ -263,14 +263,17 @@ textarea {
   font-size: 1em;
 }
 select {
-  border-radius: 0px;
-  font-size: 16px;
-  background-color: transparent;
+  border-radius: 5px;
+  font-size: 1em;
+  background-color: #eeeeee;
   border: none;
 }
 
+/* alerts */
 
-
+.s-alert-success {
+  background-color: #2bbbad!important;
+}
 
 
 
