--- a/src/index.css
+++ b/src/index.css
@@ -275,6 +275,13 @@ select {
   background-color: #2bbbad!important;
 }
 
+/* Loading and Error styles*/
+.isLoading {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  color: #263238;
+}
 
 
 
