--- a/src/pages/postList/PostListItem.css
+++ b/src/pages/postList/PostListItem.css
@@ -94,7 +94,14 @@ a.category-link {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
+	align-items: center;
 }
+@media only screen and (max-width: 490px) {
+	.edit-delete > div:first-child {
+		margin-bottom: 1em;
+	}
+}
+
 .edit-delete .buttons > button:first-child {
 	margin-right: 1em;
 }
